KAL-15: Fix projection query and mapping
