# backend/api/src/main/java/ai/kalico/api/service/mapper/ProjectMapper.java
@@ -3,6 +3,7 @@ package ai.kalico.api.service.mapper;
 
 import ai.kalico.api.data.postgres.entity.ProjectEntity;
 import ai.kalico.api.data.postgres.entity.MediaContentEntity;
+import ai.kalico.api.data.postgres.projection.UserProjectProjection;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
@@ -17,6 +18,7 @@ import org.openapitools.jackson.nullable.JsonNullable;
 import java.time.ZoneOffset;
 import java.util.ArrayList;
 import java.util.List;
+import org.springframework.util.ObjectUtils;
 
 /**
  * @author Biz Melesse
@@ -28,6 +30,28 @@ import java.util.List;
         injectionStrategy = InjectionStrategy.CONSTRUCTOR,
         uses = {JsonNullableMapper.class})
 public interface ProjectMapper {
+
+  default List<UserProject> mapProjections(List<UserProjectProjection> projections) {
+    if (ObjectUtils.isEmpty(projections)) {
+      return new ArrayList<>();
+    }
+    List<UserProject> projects = new ArrayList<>();
+    for (UserProjectProjection projection : projections) {
+      projects.add(map(projection));
+    }
+    return projects;
+  }
+
+  default UserProject map(UserProjectProjection projection) {
+    return new UserProject()
+        .projectId(projection.getProjectId())
+        .projectName(projection.getProjectName())
+        .email(projection.getEmail())
+        .contentUrl(projection.getContentUrl())
+        .userFullName(projection.getFullName())
+        .projectCreatedAt(projection.getProjectCreatedAt().toEpochSecond(ZoneOffset.UTC))
+        .registeredOn(projection.getRegisteredOn().toEpochSecond(ZoneOffset.UTC));
+  }
 
   default List<Project> map(List<ProjectEntity> projectEntities) {
     if (projectEntities == null) {
